# webtoolkit

./: .gitignore  CMakeLists.txt  html_to_cpp.py
app/: containerwidget.h  dialogs.h  groupingwidgets.h  image.h  layout.h  main.cpp  registerform.h  templates.h  text.h
app/css/: style.css
app/html/: example.html
html.build/: example.h
test/: test.cpp
